@@ -1,3 +1,14 @@
+2006-10-24  Rodney Dawes  <dobey@novell.com>
+
+	* python/A11yTestUtils.py (a11y_test_init): Add a third argument to
+	specify whether or not to run the app, so that we can test apps which
+	need to already be running, such as the panel or nautilus
+
+	* scripts/Makefile.am: Update to include all the new scripts
+
+	* scripts/gnome-panel.py: Add the beginnings of a script to test the
+	gnome-panel accessibility
+
 2006-09-28  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 2.11.1 for release
